[gd_scene load_steps=36 format=2]

[ext_resource path="res://Fonts/LACONIC_REGULAR.OTF" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/LACONIC_LIGHT.OTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Reward.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Challenges/Rewards/reward1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Challenges/Rewards/reward4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Challenges/Rewards/reward20001.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Challenges/Rewards/reward5.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Challenges/Rewards/reward6.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Challenges/Rewards/reward7.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Challenges/Rewards/reward20002.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Challenges/Rewards/reward20003.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Challenges/Rewards/reward20005.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Challenges/Rewards/reward20004.png" type="Texture" id=13]
[ext_resource path="res://Sprites/UI/Backdrops/bgrReward.png" type="Texture" id=14]
[ext_resource path="res://Shaders/BlurScreen.gdshader" type="Shader" id=15]
[ext_resource path="res://Shaders/TVWarbleScreen.gdshader" type="Shader" id=16]
[ext_resource path="res://Sprites/Challenges/Rewards/reward8.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Challenges/Rewards/reward9.png" type="Texture" id=18]
[ext_resource path="res://Sounds/staticTv.ogg" type="AudioStream" id=19]
[ext_resource path="res://Sounds/Music/winSting.wav" type="AudioStream" id=20]
[ext_resource path="res://Sounds/Cheers.wav" type="AudioStream" id=21]
[ext_resource path="res://Sounds/typeDing.ogg" type="AudioStream" id=22]
[ext_resource path="res://Sprites/Challenges/Rewards/reward20.png" type="Texture" id=23]

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 15 )
shader_param/lod = 2.4

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 16 )
shader_param/movement = 6.0
shader_param/wave_speed = 1.2
shader_param/wave_freq = 2.0
shader_param/wave_width = 0.1

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

uniform int cell_amount = 30;
uniform vec2 period = vec2(5., 10.);
uniform sampler2D uv_off_tex : hint_black;
uniform float speed = 5.0;
// Speed 5.0 works well
uniform float transparency : hint_range(0.0, 1.0);

vec2 modulo(vec2 divident, vec2 divisor){
	vec2 positiveDivident = mod(divident, divisor) + divisor;
	return mod(positiveDivident, divisor);
}

vec2 random(vec2 value){
	value = vec2( dot(value, vec2(127.1,311.7) ),
				  dot(value, vec2(269.5,183.3) ) ) * TIME;
	return -1.0 + 2.0 * fract(sin(value) * 43758.5453123);
}

float seamless_noise(vec2 uv, vec2 _period) {
	uv = uv * float(cell_amount);
	vec2 cellsMinimum = floor(uv);
	vec2 cellsMaximum = ceil(uv);
	vec2 uv_fract = fract(uv);
	
	cellsMinimum = modulo(cellsMinimum, _period);
	cellsMaximum = modulo(cellsMaximum, _period);
	
	vec2 blur = smoothstep(0.0, 1.0, uv_fract);
	
	vec2 lowerLeftDirection = random(vec2(cellsMinimum.x, cellsMinimum.y));
	vec2 lowerRightDirection = random(vec2(cellsMaximum.x, cellsMinimum.y));
	vec2 upperLeftDirection = random(vec2(cellsMinimum.x, cellsMaximum.y));
	vec2 upperRightDirection = random(vec2(cellsMaximum.x, cellsMaximum.y));
	
	vec2 fraction = fract(uv);
	
	return mix( mix( dot( lowerLeftDirection, fraction - vec2(0, 0) ),
                     dot( lowerRightDirection, fraction - vec2(1, 0) ), blur.x),
                mix( dot( upperLeftDirection, fraction - vec2(0, 1) ),
                     dot( upperRightDirection, fraction - vec2(1, 1) ), blur.x), blur.y) * 0.8 + 0.5;
}

mat4 contrastMatrix( float _contrast ){
	float t = ( 1.0 - _contrast ) / 2.0;
    return mat4( 
		vec4(_contrast, 0, 0, 0),
		vec4(0, _contrast, 0, 0),
		vec4(0, 0, _contrast, 0),
		vec4(t, t, t, 1));
}

void fragment(){
	//float noise = seamless_noise(UV, period);
	//COLOR.rgb = vec3(noise);
	//COLOR *= contrastMatrix(2.0);
	//COLOR.a = 1.0;
	
	vec2 newUv = vec2(UV.x * 0.3, UV.y);
	
	COLOR = texture(uv_off_tex, newUv + (TIME * speed));
	vec3 funColor = clamp(COLOR.rgb, 0.0, 0.1);
	COLOR.a = mix(COLOR.a * funColor.r * 3.0, 0.0, transparency);
}
"

[sub_resource type="OpenSimplexNoise" id=9]
octaves = 2
period = 3.5
persistence = 0.05

[sub_resource type="NoiseTexture" id=10]
seamless = true
noise = SubResource( 9 )

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 8 )
shader_param/cell_amount = 30
shader_param/period = Vector2( 5, 10 )
shader_param/speed = 1.5
shader_param/transparency = 0.85
shader_param/uv_off_tex = SubResource( 10 )

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 0.705882 )
extra_spacing_char = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 8
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": false,
"name": "2",
"speed": 0.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "20",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "7",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "roll",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "slip",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RewardSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DescLab:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RewardSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "RewardIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("RewardSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0.01, 0.01 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DescLab:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 0, -2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RewardSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "FadeInDone"
} ]
}

[sub_resource type="DynamicFont" id=12]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 0.705882 )
extra_spacing_char = 3
font_data = ExtResource( 1 )

[node name="Reward" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.6, 0.6, 0.6, 1 )
position = Vector2( 480, 270 )
texture = ExtResource( 14 )

[node name="BlurRect" type="ColorRect" parent="."]
material = SubResource( 6 )
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="testTV" type="ColorRect" parent="BackBufferCopy"]
material = SubResource( 7 )
margin_right = 960.0
margin_bottom = 540.0

[node name="StaticShad" type="ColorRect" parent="."]
material = SubResource( 11 )
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="CustomLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 230.0
margin_top = 129.0
margin_right = 230.0
margin_bottom = -367.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.811765, 0.745098, 0.52549, 1 )
custom_colors/font_color_shadow = Color( 0.2, 0.184314, 0.129412, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 1 )
text = "Congratulations, you've won..."
align = 1
valign = 1

[node name="RewardLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 221.0
margin_top = 164.0
margin_right = 221.0
margin_bottom = -332.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.811765, 0.745098, 0.52549, 1 )
custom_colors/font_color_shadow = Color( 0.2, 0.184314, 0.129412, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 1 )
text = "a Yellow Slip!"
align = 1
valign = 1

[node name="DescLab" type="Label" parent="."]
margin_top = 471.0
margin_right = 1920.0
margin_bottom = 571.0
rect_min_size = Vector2( 0, 100 )
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.811765, 0.745098, 0.52549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "\"Isn't that neat?\" - Phone Guy"
align = 1
valign = 1

[node name="RewardSprite" type="AnimatedSprite" parent="."]
position = Vector2( 458, 292 )
frames = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RewardIn"
anims/RESET = SubResource( 4 )
anims/RewardIn = SubResource( 5 )

[node name="ContinueButton" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 756.0
margin_top = 459.0
margin_right = 1056.0
margin_bottom = 559.0
rect_min_size = Vector2( 0, 100 )
rect_scale = Vector2( 0.5, 0.5 )
text = "Resume"

[node name="ResumeLabel" type="Label" parent="ContinueButton"]
margin_right = 300.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.811765, 0.745098, 0.52549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 12 )
text = "Continue"
align = 2
valign = 1

[node name="StaticSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -28.0
pitch_scale = 0.4
autoplay = true

[node name="WinSting" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -6.0
autoplay = true

[node name="Cheers" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -6.0
autoplay = true

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -2.0

[connection signal="mouse_entered" from="ContinueButton" to="." method="_on_ContinueButton_mouse_entered"]
[connection signal="mouse_exited" from="ContinueButton" to="." method="_on_ContinueButton_mouse_exited"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
